--- a/steep.conf
+++ b/steep.conf
@@ -1,7 +1,11 @@
-[timer1]
+[timer.green]
 label: Green Tea
 length: 180
 
-[timer2]
+[timer.black]
 label: Black Tea
 length: 300
+
+[timer.herbal]
+label: Black Tea
+length: 420
