--- a/steep.conf
+++ b/steep.conf
@@ -1,11 +1,14 @@
+[options]
+finished_message: Your tea is ready.
+
 [timer.green]
 label: Green Tea
-length: 180
+duration: 180
 
 [timer.black]
 label: Black Tea
-length: 300
+duration: 300
 
 [timer.herbal]
-label: Black Tea
-length: 420
+label: Herbal Tea
+duration: 420
